open innovation center

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
           <span class="popular__description">Medi tech, or medical technology, involves the use of technology to improve
             healthcare outcomes, including diagnosis, treatment, and patient care.</span>
         </article>
+      </div>
+      <div class="popular__container__center container grid">
         <article class="popular__card">
           <img style="width: 195px; height: 195px;" src="assets/img/openinovation.png" alt="popular image"
             class="popular__img" />
