registeration link added

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               Science and Engineering 
               KMEA Engineering College.</span>
             <div style="margin: 25px;">
-              <a href="https://airtable.com/shr7oz5CjntsmRBo3"><button class="button newsletter__button">
+              <a href="https://airtable.com/appUNBBGBYoW5yeFE/shrbxs8cymigJ1RWE"><button class="button newsletter__button">
                   <i class="fri-send-plane-line"></i>
                   Register now
                 </button></a>
@@ -760,7 +760,7 @@
           </div>
           <div class="col-xl-4 col-md-4 mb-30">
             <div class="single-cta">
-              <a href="https://airtable.com/shr7oz5CjntsmRBo3"><button class="button newsletter__button">
+              <a href="https://airtable.com/appUNBBGBYoW5yeFE/shrbxs8cymigJ1RWE"><button class="button newsletter__button">
                   <i class="fri-send-plane-line"></i>
                   Register now
                 </button></a>
