--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           </div>
           <div class="staff-card-bottom">
             <div class="staff-card-name">
-              Amal M R
+              Dr. Benazir 
             </div>
             <div class="staff-card-position">
               Assistant Professor
@@ -398,7 +398,7 @@
           </div>
           <div class="staff-card-bottom">
             <div class="staff-card-name" style="font-size:15px;">
-              Fasalul Faseeh K R
+              Vidya Hari
             </div>
             <div class="staff-card-position">
               Assistant Professor
@@ -418,13 +418,13 @@
             <div class=" team " style=" margin-left:2px; margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
               <div class="teamoverly_wrap">
                 <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/mansoor 1.png" alt="person-img">
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/mansoor 1.jpg" alt="person-img">
                 </div>
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
                     <div class="teamoverly_info_title">
                       <h4 class="teamoverly_name">Mansoor Majeed</h4>
-                      <h5 class="teamoverly_Post">Coordinator</h5>
+                      <h5 class="teamoverly_Post">Organizer</h5>
                     </div>
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
@@ -447,14 +447,14 @@
             <div class=" team" style="margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
               <div class="teamoverly_wrap">
                 <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/SHAHANAZ A H.jpg"
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/SHAHANAZ A H.jpeg"
                     alt="person-img">
                 </div>
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
                     <div class="teamoverly_info_title">
                       <h4 class="teamoverly_name">Shahanaz A H </h4>
-                      <h5 class="teamoverly_Post">Coordinator</h5>
+                      <h5 class="teamoverly_Post">Organizer</h5>
                     </div>
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
@@ -473,46 +473,19 @@
             <div class="team" style=" margin-left:2px; margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
               <div class="teamoverly_wrap">
                 <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/C.A. Kalidas.jpg"
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/amna.jpeg"
                     alt="person-img">
                 </div>
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
                     <div class="teamoverly_info_title">
-                      <h4 class="teamoverly_name">Kalidas C A</h4>
-                      <h5 class="teamoverly_Post">Operations</h5>
+                      <h4 class="teamoverly_name">Amna Navas</h4>
+                      <h5 class="teamoverly_Post">Organizer</h5>
                     </div>
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
                         <li>
                           <a target="_blank" href="https://github.com/Kalz293" class="fab fa-github"></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="team " style="margin-bottom:30px; " data-aos="zoom-out" data-aos-delay="100">
-              <div class="teamoverly_wrap">
-                <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/Shebreen K.jpg" alt="person-img">
-                </div>
-                <div class="teamoverly_info">
-                  <div class="teamoverly_info_inner">
-                    <div class="teamoverly_info_title">
-                      <h4 class="teamoverly_name">Fathima Shebreen</h4>
-                      <h5 class="teamoverly_Post">Operations</h5>
-                    </div>
-                    <div class="teamoverly_social">
-                      <ul class="list-unstyled teamoverly_social_item">
-                        <li>
-                          <a target="_blank" href="http://www.linkedin.com/in/fathima-shebreen"
-                            class="fab fa-linkedin-in fab"></a>
-                        </li>
-                        <li>
-                          <a target="_blank" href="https://github.com/shebreen" class="fab fa-github"></a>
                         </li>
                       </ul>
                     </div>
@@ -529,7 +502,7 @@
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
                     <div class="teamoverly_info_title">
-                      <h4 class="teamoverly_name">Farisha K R</h4>
+                      <h4 class="teamoverly_name">Sahal M S</h4>
                       <h5 class="teamoverly_Post">Operations</h5>
                     </div>
                     <div class="teamoverly_social">
@@ -548,18 +521,42 @@
             <div class=" team" style=" margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
               <div class="teamoverly_wrap">
                 <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/Ummer.jpeg" alt="person-img">
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/azlam.jpeg" alt="person-img">
                 </div>
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
                     <div class="teamoverly_info_title">
-                      <h4 class="teamoverly_name">Ubaidha Ummer</h4>
+                      <h4 class="teamoverly_name">Mohammed Azlam</h4>
                       <h5 class="teamoverly_Post">Operations</h5>
                     </div>
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
                         <li>
                           <a target="_blank" href="https://www.linkedin.com/in/ubaidha-ummer-2b92b2255"
+                            class="fab fa-linkedin-in fab"></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class=" team" style=" margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
+              <div class="teamoverly_wrap">
+                <div class="teamoverly_img">
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/Fahaz Bazil.jpg" alt="person-img">
+                </div>
+                <div class="teamoverly_info">
+                  <div class="teamoverly_info_inner">
+                    <div class="teamoverly_info_title">
+                      <h4 class="teamoverly_name">Afla Nasrin</h4>
+                      <h5 class="teamoverly_Post">Operations</h5>
+                    </div>
+                    <div class="teamoverly_social">
+                      <ul class="list-unstyled teamoverly_social_item">
+                        <li>
+                          <a target="_blank" href="https://www.linkedin.com/in/fahas-basil-61919b219"
                             class="fab fa-linkedin-in fab"></a>
                         </li>
                       </ul>
@@ -597,37 +594,6 @@
             </div>
 
 
-            <div class=" team" style="  margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
-              <div class="teamoverly_wrap">
-                <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/Nadeem Jaleel.jpg"
-                    alt="person-img">
-                </div>
-                <div class="teamoverly_info">
-                  <div class="teamoverly_info_inner">
-                    <div class="teamoverly_info_title">
-                      <h4 class="teamoverly_name">Nadeem Jaleel </h4>
-                      <h5 class="teamoverly_Post">Tech Team</h5>
-                    </div>
-                    <div class="teamoverly_social">
-                      <ul class="list-unstyled teamoverly_social_item">
-                        <li>
-                          <a target="_blank" href="https://www.linkedin.com/in/nadeem-jaleel-4264a7241"
-                            class="fab fa-linkedin-in fab"></a>
-                        </li>
-                        <li>
-                          <a target="_blank" href="https://www.behance.net/nadeemjaleel1346"
-                            class="fa-brands fa fa-behance"></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-
-
             <div class=" team" style=" margin-left:2px; margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
               <div class="teamoverly_wrap">
                 <div class="teamoverly_img">
@@ -636,8 +602,8 @@
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
                     <div class="teamoverly_info_title">
-                      <h4 class="teamoverly_name">Ashna T</h4>
-                      <h5 class="teamoverly_Post">Tech Team</h5>
+                      <h4 class="teamoverly_name">Ansaf Sajid</h4>
+                      <h5 class="teamoverly_Post">Finanace</h5>
                     </div>
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
@@ -655,22 +621,28 @@
               </div>
             </div>
 
-            <div class=" team" style=" margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
+
+            <div class=" team" style="  margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
               <div class="teamoverly_wrap">
                 <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/Fahaz Bazil.jpg" alt="person-img">
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/Nadeem Jaleel.jpg"
+                    alt="person-img">
                 </div>
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
                     <div class="teamoverly_info_title">
-                      <h4 class="teamoverly_name">Fahas Basil</h4>
-                      <h5 class="teamoverly_Post">Media Team</h5>
+                      <h4 class="teamoverly_name">Nadeem Jaleel </h4>
+                      <h5 class="teamoverly_Post">media</h5>
                     </div>
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
                         <li>
-                          <a target="_blank" href="https://www.linkedin.com/in/fahas-basil-61919b219"
+                          <a target="_blank" href="https://www.linkedin.com/in/nadeem-jaleel-4264a7241"
                             class="fab fa-linkedin-in fab"></a>
+                        </li>
+                        <li>
+                          <a target="_blank" href="https://www.behance.net/nadeemjaleel1346"
+                            class="fa-brands fa fa-behance"></a>
                         </li>
                       </ul>
                     </div>
@@ -703,6 +675,106 @@
                 </div>
               </div>
             </div>
+
+            <div class=" team" class="aman" style="margin-left:2px ; margin-bottom: 30px;" data-aos="zoom-out"
+              data-aos-delay="100">
+              <div class="teamoverly_wrap">
+                <div class="teamoverly_img">
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/aman feroz.jpg" alt="person-img">
+                </div>
+                <div class="teamoverly_info">
+                  <div class="teamoverly_info_inner">
+                    <div class="teamoverly_info_title">
+                      <h4 class="teamoverly_name">Farhan</h4>
+                      <h5 class="teamoverly_Post">Media Team</h5>
+                    </div>
+                    <div class="teamoverly_social">
+                      <ul class="list-unstyled teamoverly_social_item">
+                        <li>
+                          <a target="_blank" href="https://www.linkedin.com/in/aman-tf-84b8b8210"
+                            class="fab fa-linkedin-in fab"></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class=" team" class="aman" style="margin-left:2px ; margin-bottom: 30px;" data-aos="zoom-out"
+            data-aos-delay="100">
+            <div class="teamoverly_wrap">
+              <div class="teamoverly_img">
+                <img class="img-fluid" style="border-radius: 10px;" src="assets/img/aman feroz.jpg" alt="person-img">
+              </div>
+              <div class="teamoverly_info">
+                <div class="teamoverly_info_inner">
+                  <div class="teamoverly_info_title">
+                    <h4 class="teamoverly_name">Amith</h4>
+                    <h5 class="teamoverly_Post">Media Team</h5>
+                  </div>
+                  <div class="teamoverly_social">
+                    <ul class="list-unstyled teamoverly_social_item">
+                      <li>
+                        <a target="_blank" href="https://www.linkedin.com/in/aman-tf-84b8b8210"
+                          class="fab fa-linkedin-in fab"></a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class=" team" class="aman" style="margin-left:2px ; margin-bottom: 30px;" data-aos="zoom-out"
+          data-aos-delay="100">
+          <div class="teamoverly_wrap">
+            <div class="teamoverly_img">
+              <img class="img-fluid" style="border-radius: 10px;" src="assets/img/aman feroz.jpg" alt="person-img">
+            </div>
+            <div class="teamoverly_info">
+              <div class="teamoverly_info_inner">
+                <div class="teamoverly_info_title">
+                  <h4 class="teamoverly_name">Goutham</h4>
+                  <h5 class="teamoverly_Post">Media Team</h5>
+                </div>
+                <div class="teamoverly_social">
+                  <ul class="list-unstyled teamoverly_social_item">
+                    <li>
+                      <a target="_blank" href="https://www.linkedin.com/in/aman-tf-84b8b8210"
+                        class="fab fa-linkedin-in fab"></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class=" team" class="aman" style="margin-left:2px ; margin-bottom: 30px;" data-aos="zoom-out"
+        data-aos-delay="100">
+        <div class="teamoverly_wrap">
+          <div class="teamoverly_img">
+            <img class="img-fluid" style="border-radius: 10px;" src="assets/img/aman feroz.jpg" alt="person-img">
+          </div>
+          <div class="teamoverly_info">
+            <div class="teamoverly_info_inner">
+              <div class="teamoverly_info_title">
+                <h4 class="teamoverly_name">Dilshad</h4>
+                <h5 class="teamoverly_Post">Media Team</h5>
+              </div>
+              <div class="teamoverly_social">
+                <ul class="list-unstyled teamoverly_social_item">
+                  <li>
+                    <a target="_blank" href="https://www.linkedin.com/in/aman-tf-84b8b8210"
+                      class="fab fa-linkedin-in fab"></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
 
