more images added

--- a/index.html
+++ b/index.html
@@ -372,13 +372,13 @@
     </section>
 
     <!--Staff coordinators-->
-    <!-- <section>
+    <section>
       <h2 class="section__title" style="margin: 80px;">Staff Coordinators</h2>
       <div class="staff">
         <div class="staff-card">
           <div class="staff-card-top">
             <div class="staff-card-image" style="margin-left: 20px; margin-top: 20px;">
-              <img src="assets/img/Amal M. R..jpeg" alt="">
+              <img src="assets/img/Dr.-Benazir-K-K.jpg" alt="">
             </div>
           </div>
           <div class="staff-card-bottom">
@@ -393,7 +393,7 @@
         <div class="staff-card">
           <div class="staff-card-top">
             <div class="staff-card-image" style="margin-left: 20px; margin-top: 20px;">
-              <img src="assets/img/Untitled design.png" alt="">
+              <img src="assets/img/Vidya-Hari.jpg" alt="">
             </div>
           </div>
           <div class="staff-card-bottom">
@@ -406,7 +406,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
 
     <!--Organisers -->
@@ -485,7 +485,7 @@
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
                         <li>
-                          <a target="_blank" href="https://github.com/Kalz293" class="fab fa-github"></a>
+                          <a target="_blank" href="#" class="fab fa-github"></a>
                         </li>
                       </ul>
                     </div>
@@ -497,7 +497,7 @@
             <div class=" team" style="margin-left:2px; margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
               <div class="teamoverly_wrap">
                 <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/Farisha KR.jpg" alt="person-img">
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/sahal.jpeg" alt="person-img">
                 </div>
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
@@ -509,7 +509,7 @@
                       <ul class="list-unstyled teamoverly_social_item">
 
                         <li>
-                          <a target="_blank" href="https://github.com/FarishaKR" class="fab fa-github"></a>
+                          <a target="_blank" href="#" class="fab fa-github"></a>
                         </li>
                       </ul>
                     </div>
@@ -532,7 +532,7 @@
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
                         <li>
-                          <a target="_blank" href="https://www.linkedin.com/in/ubaidha-ummer-2b92b2255"
+                          <a target="_blank" href="#"
                             class="fab fa-linkedin-in fab"></a>
                         </li>
                       </ul>
@@ -545,7 +545,7 @@
             <div class=" team" style=" margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
               <div class="teamoverly_wrap">
                 <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/Fahaz Bazil.jpg" alt="person-img">
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/afla.jpeg" alt="person-img">
                 </div>
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
@@ -556,7 +556,7 @@
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
                         <li>
-                          <a target="_blank" href="https://www.linkedin.com/in/fahas-basil-61919b219"
+                          <a target="_blank" href="#"
                             class="fab fa-linkedin-in fab"></a>
                         </li>
                       </ul>
@@ -597,7 +597,7 @@
             <div class=" team" style=" margin-left:2px; margin-bottom: 30px;" data-aos="zoom-out" data-aos-delay="100">
               <div class="teamoverly_wrap">
                 <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/ashna1.jpg" alt="person-img">
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/ansaf.jpeg" alt="person-img">
                 </div>
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
@@ -608,7 +608,7 @@
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
                         <li>
-                          <a target="_blank" href="https://www.linkedin.com/in/ashnat"
+                          <a target="_blank" href="#"
                             class="fab fa-linkedin-in fab"></a>
                         </li>
                         <li>
@@ -691,7 +691,7 @@
                     <div class="teamoverly_social">
                       <ul class="list-unstyled teamoverly_social_item">
                         <li>
-                          <a target="_blank" href="https://www.linkedin.com/in/aman-tf-84b8b8210"
+                          <a target="_blank" href="#"
                             class="fab fa-linkedin-in fab"></a>
                         </li>
                       </ul>
@@ -716,7 +716,7 @@
                   <div class="teamoverly_social">
                     <ul class="list-unstyled teamoverly_social_item">
                       <li>
-                        <a target="_blank" href="https://www.linkedin.com/in/aman-tf-84b8b8210"
+                        <a target="_blank" href="#"
                           class="fab fa-linkedin-in fab"></a>
                       </li>
                     </ul>
@@ -741,7 +741,7 @@
                 <div class="teamoverly_social">
                   <ul class="list-unstyled teamoverly_social_item">
                     <li>
-                      <a target="_blank" href="https://www.linkedin.com/in/aman-tf-84b8b8210"
+                      <a target="_blank" href="#"
                         class="fab fa-linkedin-in fab"></a>
                     </li>
                   </ul>
@@ -766,7 +766,7 @@
               <div class="teamoverly_social">
                 <ul class="list-unstyled teamoverly_social_item">
                   <li>
-                    <a target="_blank" href="https://www.linkedin.com/in/aman-tf-84b8b8210"
+                    <a target="_blank" href="#"
                       class="fab fa-linkedin-in fab"></a>
                   </li>
                 </ul>
