--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--=============== FAVICON ===============-->
-  <link rel="shortcut icon" href="Hac’K_237 1.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
   <!--=============== REMIXICONS ===============-->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
   <!-- Font Awesome -->
@@ -69,7 +69,7 @@
   <header class="header" id="header">
     <nav class="nav container">
       <a href="" class="nav__logo">
-        <img src="Hac’K_237.png" style="height: 30px; width: 150px;" alt="logo image" />
+        <img src="assets/img/logo.png" style="height: 30px; width: 150px;" alt="logo image" />
       </a>
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
@@ -680,7 +680,7 @@
               data-aos-delay="100">
               <div class="teamoverly_wrap">
                 <div class="teamoverly_img">
-                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/aman feroz.jpg" alt="person-img">
+                  <img class="img-fluid" style="border-radius: 10px;" src="assets/img/farhan.jpg" alt="person-img">
                 </div>
                 <div class="teamoverly_info">
                   <div class="teamoverly_info_inner">
@@ -705,7 +705,7 @@
             data-aos-delay="100">
             <div class="teamoverly_wrap">
               <div class="teamoverly_img">
-                <img class="img-fluid" style="border-radius: 10px;" src="assets/img/aman feroz.jpg" alt="person-img">
+                <img class="img-fluid" style="border-radius: 10px;" src="assets/img/amith.JPG" alt="person-img">
               </div>
               <div class="teamoverly_info">
                 <div class="teamoverly_info_inner">
@@ -730,7 +730,7 @@
           data-aos-delay="100">
           <div class="teamoverly_wrap">
             <div class="teamoverly_img">
-              <img class="img-fluid" style="border-radius: 10px;" src="assets/img/aman feroz.jpg" alt="person-img">
+              <img class="img-fluid" style="border-radius: 10px;" src="assets/img/goutham.jpg" alt="person-img">
             </div>
             <div class="teamoverly_info">
               <div class="teamoverly_info_inner">
@@ -755,7 +755,7 @@
         data-aos-delay="100">
         <div class="teamoverly_wrap">
           <div class="teamoverly_img">
-            <img class="img-fluid" style="border-radius: 10px;" src="assets/img/aman feroz.jpg" alt="person-img">
+            <img class="img-fluid" style="border-radius: 10px;" src="assets/img/Dhilshad V A.jpg" alt="person-img">
           </div>
           <div class="teamoverly_info">
             <div class="teamoverly_info_inner">
